<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@id/charge_id_account"
            style="@style/home_sourcedetail_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_info_charge_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/home_sourcedetail_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_info_charge_money" />

            <EditText
                android:id="@id/charge_id_money"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/string_info_charge_tips"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@id/charge_id_spinner"
                style="@style/SpinnerStyle"
                android:layout_width="120dp"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/home_sourcedetail_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_info_charge_mode" />

            <RadioGroup
                android:id="@id/charge_id_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@id/charge_id_radio1"
                    style="@style/charge_radio_style"
                    android:checked="true"
                    android:text="@string/string_info_charge_zfb" />

                <RadioButton
                    android:id="@id/charge_id_radio2"
                    style="@style/charge_radio_style"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_info_charge_yb" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/home_sourcedetail_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/string_info_charge_help"
            android:textSize="@dimen/font_size_small" />

        <Button
            android:id="@id/charge_id_ok"
            style="@style/info_button_style"
            android:layout_marginTop="10dp"
            android:text="@string/string_info_charge_ok" />

        <TextView
            android:id="@id/charge_id_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:text="@string/string_info_charge_record"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</LinearLayout>