<?xml version="1.0" encoding="utf-8"?>
<!-- 选填 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/common_title"/>

    <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_name"/>

                <EditText
                        android:id="@id/vip_id_add_name"
                        style="@style/info_edittext_style"
                        android:layout_marginLeft="0dp"
                        android:hint=""/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_area"/>

                <RadioGroup
                        android:id="@+id/publish_group1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/vip_id_add_province"
                            style="@style/publish_radio_style"
                            android:text="@string/string_vip_add_province"/>

                    <RadioButton
                            android:id="@+id/vip_id_add_city"
                            style="@style/publish_radio_style"
                            android:layout_marginLeft="3dp"
                            android:layout_marginRight="3dp"
                            android:text="@string/string_vip_add_city"/>

                    <RadioButton
                            android:id="@+id/vip_id_add_towns"
                            style="@style/publish_radio_style"
                            android:text="@string/string_vip_add_towns"/>
                </RadioGroup>
            </LinearLayout>

            <include
                    android:id="@id/info_id_register_city"
                    layout="@layout/common_city"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_addr"/>

                <EditText
                        android:id="@id/vip_id_add_addr"
                        style="@style/info_edittext_style"
                        android:layout_marginLeft="0dp"
                        android:hint=""/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_lbs"/>

                <Button
                        android:id="@id/vip_id_add_lbs"
                        style="@style/publish_radio_style"
                        android:layout_marginLeft="0dp"
                        android:text="@string/string_vip_add_lbs_btn"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_phone"/>

                <EditText
                        android:id="@id/vip_id_add_contact"
                        style="@style/info_edittext_style"
                        android:inputType="number"
                        android:layout_marginLeft="0dp"
                        android:hint=""/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_park_number"/>

                <EditText
                        android:id="@id/vip_id_add_phone"
                        style="@style/info_edittext_style"
                        android:inputType="number"
                        android:layout_marginLeft="0dp"
                        android:hint=""/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_normalprice"/>

                <EditText
                        android:id="@id/vip_id_add_normalprice"
                        style="@style/info_edit_text_spe_style"
                        android:layout_marginLeft="0dp"
                        android:inputType="numberDecimal"
                        android:hint=""/>

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:gravity="left"
                        android:text="@string/string_vip_add_price"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_youhui"/>

                <EditText
                        android:id="@id/vip_id_add_youhui"
                        style="@style/info_edittext_style"
                        android:layout_marginLeft="0dp"
                        android:hint=""/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/info_textview_style"
                        android:layout_width="wrap_content"
                        android:text="@string/string_vip_add_other"/>

                <EditText
                        android:id="@id/vip_id_add_other"
                        style="@style/info_edittext_style"
                        android:layout_marginLeft="0dp"
                        android:hint=""/>
            </LinearLayout>

            <include
                    android:id="@+id/vip_id_add_photo"
                    layout="@layout/common_select_photo"/>

            <Button
                    android:id="@id/vip_id_add_submit"
                    style="@style/info_button_style"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_vip_add_submit"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>